--- a/src/app/layouts/public-wrapper/public-wrapper.component.html
+++ b/src/app/layouts/public-wrapper/public-wrapper.component.html
@@ -1,7 +1,7 @@
 <sc-public-header></sc-public-header>
-<div class="container">
-  <div class="row">
+<div class="container h-100">
+
     <router-outlet></router-outlet>
-  </div>
+
 </div>
 <p>FOOTER</p>
